--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,34 +1,43 @@
-name: CHECKS
+name: Automerge
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Try enabling auto-merge for all open pull requests. (Only recommended for testing.)
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [main]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Try enabling auto-merge for all open pull requests.
+  #schedule:
+  #  - cron: 0 * * * *
+
+  # Try enabling auto-merge for a pull request when a draft is marked as “ready for review”, when
+  # a required label is applied or when a “do not merge” label is removed, or when a pull request
+  # is updated in any way (opened, synchronized, reopened, edited).
+  pull_request_target:
+    types:
+      - opened
+      - synchronized
+      - reopened
+      - edited
+      - labeled
+      - unlabeled
+      - ready_for_review
+
+  # Try enabling auto-merge for the specified pull request or all open pull requests if none is specified.
   workflow_dispatch:
+    inputs:
+      pull-request:
+        description: Pull Request Number
+        required: false
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  automerge:
     runs-on: ubuntu-latest
-    
-- name: Trigger Workflow
-  uses: actions/github-script@v6
-  with:
-    script: |
-      github.rest.actions.createWorkflowDispatch({
-        owner: context.repo.owner,
-        repo: context.repo.repo,
-        workflow_id: 'blank.yml',
-        ref: '${{ github.head_ref }}',
-        inputs: {
-          "workflow-input-1": "value-1",
-          "workflow-input-2": "value-2",
-        }
-      })
+    steps:
+      - uses: reitermarkus/automerge@v2
+        with:
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
+          merge-method: rebase
+          do-not-merge-labels: never-merge
+          required-labels: automerge
+          pull-request: ${{ github.event.inputs.pull-request }}
+          dry-run: true
